--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                         icon: "https://i.pinimg.com/originals/a4/49/43/a449431f174392bfbbbab501400e83be.jpg",
                         text: "Greetings and Salutations!",
                         callback: function (t) {
-                            return t.card().then(card => alert('Greetings and Salutations'))
+                            return t.card('id', 'name').then(card => alert(`Greetings and Salutations from ${card.name}`))
                         }
                     }
                 ]
